[package]
name = "minesweeper_multiplayer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core logic for Minesweeper game"
homepage = "https://github.com/etoledom/minesweeper_multiplayer"
documentation = "https://github.com/etoledom/minesweeper_multiplayer"
repository = "https://github.com/etoledom/minesweeper_multiplayer"
readme = "README.md"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minesweeper_core = { path = "../minesweeper_core" }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
